--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_booking_fragment">booking</string>
     <string name="map">Map</string>
+    <string name="Vehicle_information">Vehicle Information</string>
 
 </resources>
