--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,15 @@
     <string name="map">Map</string>
     <string name="Vehicle_information">Vehicle Information</string>
     <string name="add_card">Add Card</string>
+    <string name="choose_duration">Choose Duration</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="close">Close</string>
 
+    // stripe keys//
+    <string name="PublishableKey">pk_test_51OjOHoCTdoQWDPpqUIigF81EkPKpeEeurB2aw3dfvWQmoXCai6XVsY8sYwm9LSwHdFiLXqusY0kYlD7B9QoGE8oh00kl9NL05E</string>
+    <string name="SecretKey">sk_test_51OjOHoCTdoQWDPpqEterXHfQMnrOxluO593psmQ6tLy16kvIXaeYV98zmJmfEIJ2PaC38VTkRT17DRjrnYmB4MyX00l1RtIIWE</string>
+    <string name="CustomerId"></string>
+    <string name="EphemeralKey"></string>
+    <string name="delete_card">Delete</string>
 </resources>
