refactored login/signup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="delete_card">Delete</string>
     <string name="remove_card">Remove Card</string>
     <string name="add_new_card">Add New Card</string>
+    <string name="email_or_username">Email/Username</string>
 </resources>
