--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="default_notification_channel_id">Default Notification Channel ID</string>
     <string name="filter">Filter</string>
     <string name="don_t_have_an_account">Don’t have an account?</string>
+    <string name="google_maps_key">AIzaSyDLQyr8Wnp_uxpefltVDlRsLyRTRvb3oDY</string>
 </resources>
